Update project name

--- a/src/pages/Newtab/index.html
+++ b/src/pages/Newtab/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CThumbtack Tracking Tracker (with React 16.6+ & Webpack 4+)</title>
+    <title>Thumbtack Tracking Inspector (with React 16.6+ & Webpack 4+)</title>
   </head>
 
   <body>
