--- a/src/pages/Panel/index.html
+++ b/src/pages/Panel/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>TT Tracking Tracker</title>
+    <title>TT Tracking Inspector</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css"
